app/cruming-server/deployment.yaml
# apps/cruming-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cruming-server
  labels:
    app: cruming-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cruming-server
  template:
    metadata:
      labels:
        app: cruming-server
    spec:
      containers:
        - name: cruming-server
          image: minyubo/cruming-server:latest  # Jenkins가 이 태그를 업데이트할 예정
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cruming-server-service
spec:
  selector:
    app: cruming-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
