app/cruming-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend-service
  namespace: app-backend
spec:
  selector:
    app: app-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
