app/cruming-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cruming-server-ingress
  namespace: cruming-server
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cruming.site
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: cruming-server-service
                port:
                  number: 8080
    - host: www.cruming.site
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: cruming-server-service
                port:
                  number: 8080
